[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "minjung00", email = "kmj931208@gmail.com"},
]
dependencies = [
    "uvicorn[standard]>=0.23.2",
    "fastapi>=0.104.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
